# lightlib

./: .gitignore  ConsoleApplication9.sln  Light.sln  README.md  dump.rdb
.github/ISSUE_TEMPLATE/: 10_question_support.yml  11_code_review.yml  1_bug_report.yml  2_feature_request.yml  3_documentation.yml  4_performance_issue.yml  5_security_vulnerability.yml  6_api_change.yml  7_deprecation.yml  8_test_failure.yml  9_build_deploy_issue.yml  config.yml
ConsoleApplication9/: .gitignore  ConsoleApplication9.vcxproj  ConsoleApplication9.vcxproj.filters  Controller.hpp  Database.cpp  Database.hpp  HelloController.cpp  Main.cpp  Model.cpp  Router.cpp  Router.hpp
ConsoleApplication9/Controllers/: HelloController.cpp  HomeController.hpp
ConsoleApplication9/Database/Models/: User.cpp
ConsoleApplication9/Models/: Model.hpp
Light/: .env  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CoreModule.cpp  CoreModule.ixx  Light.vcxproj  Light.vcxproj.filters  Main.cpp  build.bat  build.sh  vcpkg.json
Light/App/Http/Controllers/: Controller.hpp  HashController.hpp  HelloController.hpp  HomeController.hpp  ProfileController.hpp  ResetPasswordController.hpp  UserController.hpp
Light/App/Http/Helpers/: Code.hpp  Cookie.hpp  Validator.hpp
Light/App/Http/Middlewares/: AuthMiddleware.hpp  CorsHandler.hpp  CorsMiddleware.hpp  DefaultCorsHandler.hpp  LoggingMiddleware.hpp  Middleware.hpp  MiddlewareChain.hpp  MiddlwarePipeline.hpp  RandomBlockMiddleware.hpp  ValidationMiddleware.hpp
Light/App/Http/Services/: AuthService.hpp  Service.hpp
Light/Controllers/: APIController.hpp  APIOneController.hpp  Controller.hpp  HelloController.cpp  HelloController.hpp  HomeController.cpp  HomeController.hpp
Light/Database/: Cache.hpp  Database.cpp  Database.hpp  Queue.hpp  SQLBuilder.hpp  SQLSchemaBuilder.hpp  SQLString.hpp
Light/Database/Migrations/: BaseMigration.hpp  Initializer.hpp  MigrationManager.hpp  Migrations.hpp  migration_backup_codes_table.hpp  migration_migrations_table.hpp  migration_organizations_table.hpp  migration_posts_create.hpp  migration_users_create.hpp
Light/Database/Models/: BackupCode.hpp  Model.cpp  Model.hpp  ModelQueryBuilder.hpp  Organization.hpp  Post.hpp  User.cpp  User.hpp
Light/Router/: Route.hpp  Router.cpp  Router.hpp  RouterRegisterer.hpp  types.hpp
Light/Service/: AuthService.hpp
Light/Storage/: Storage.hpp
Light/Storage/public/: example_copy.txt
Light/Tests/: Test.cpp
Light/include/lightlib/: DB  server.hpp
Light/include/lightlib/App/Http/Helpers/: HttpClient.hpp
Light/include/lightlib/App/Http/Middlewares/: CorsMiddleware.hpp
Light/include/lightlib/Database/: Collection.hpp
Light/include/lightlib/Database/Models/: Model.hpp  ModelQueryBuilder.hpp
Light/include/lightlib/Filesystem/: BaseDriver.hpp  FileDriver.hpp
Light/include/lightlib/mixins/: Chainable.hpp  CorsDecorator.hpp  Decorator.hpp  mixins.hpp
Light/src/: ConfigManager.cpp  HttpClient.cpp  Server.cpp  Storage.cpp  WebSocketManager.cpp  WebSocketServer.cpp
Light/src/Cryptography/: Rsa.cpp  crypt.md
Light/src/Database/: Cache.cpp  Queue.cpp
enc_temp_folder/519c83a27e8f2231825a5c9bf4f6e21/: Main.cpp
